fixed responsive overlapping text only in french language

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3157,3 +3157,8 @@ div#modal-user-management div.widget {
         width: auto;
     }
 }
+@media only screen and (max-width: 480px) {
+    .filter-bar .news-list-news-filter-limit {
+        width: 50%;
+    }
+}
